--- a/package.json
+++ b/package.json
@@ -17,8 +17,15 @@
   },
   "homepage": "https://github.com/thomasebsmith/media-tracker#readme",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^21.0.2",
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "@types/papaparse": "^5.3.2",
-    "typescript": "^4.5.5"
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
+    "eslint": "^8.10.0",
+    "rollup": "^2.68.0",
+    "typescript": "^4.5.5",
+    "uglify-js": "^3.15.2"
   },
   "dependencies": {
     "jspdf": "^2.5.1",
